--- a/apps/react/src/index.css
+++ b/apps/react/src/index.css
@@ -20,6 +20,10 @@ body,
 	border: 0.75px solid rgba(255, 255, 255, 0.44);
 }
 
+.card-container {
+	@apply bg-white rounded-2xl card-border py-3 px-5;
+}
+
 .card-shadow-1 {
 	box-shadow: -10px 20px 20px 0px rgba(0, 0, 0, 0.2);
 }
