--- a/apps/react/src/index.css
+++ b/apps/react/src/index.css
@@ -2,6 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+	font-family: 'Inter';
+	font-style: normal;
+	font-weight: 100 900;
+	font-display: swap;
+	src: url('/fonts/InterVariable.woff2') format('woff2-variations');
+}
+
+@font-face {
+	font-family: 'Inter';
+	font-style: italic;
+	font-weight: 100 900;
+	font-display: swap;
+	src: url('/fonts/InterVariable-Italic.woff2') format('woff2-variations');
+}
+
 * {
 	box-sizing: border-box;
 }
@@ -13,7 +29,7 @@ body,
 	width: 100vw;
 	height: 100vh;
 	margin: 0 auto;
-	/* font-family: 'Jost', sans-serif; */
+	font-family: Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica Neue, Arial, "Apple Color Emoji", "Segoe UI Emoji";
 }
 
 .card-border {
